@@ -1,3 +1,7 @@
+2002-10-19  John Harper  <jsh@unfactored.org>
+
+	* keys.c (find_meta): use our own nconc function
+
 2002-10-03  John Harper  <jsh@unfactored.org>
 
 	* functions.c (Fget_x_text_property, Fset_x_text_property):
